--- a/static/layout.less
+++ b/static/layout.less
@@ -43,6 +43,7 @@
   position: relative;
   left: 0;
   .transition-left;
+  flex-grow: 1;
   @media screen and (min-width: @breakpoint){
     display: flex;
     flex-grow: 1;
