--- a/static/search.less
+++ b/static/search.less
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	align-self: center;
-	width: 200px;
+	width: 170px;
 	@media screen and (max-width: 399px){
         margin-right: @gutter;
     }
@@ -22,9 +22,9 @@
 			display: block;
 			height: 1em;
 			width: 1em;
-			font-size: 1em;
+			font-size: 1.25em;
 			cursor: pointer;
-			background-image: url(img/icon-search-black.svg);
+			background-image: url(img/icon-search-black-thin.svg);
 			background-size: cover;
 			background-repeat: no-repeat;
 			opacity: .25;
